# opencode-hub

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml
apps/browser-extension/: manifest.json  package.json  tsconfig.json  vite.config.ts
apps/browser-extension/src/background/: service-worker.ts
apps/browser-extension/src/content/: index.ts
apps/browser-extension/src/options/: index.html  main.tsx
apps/browser-extension/src/sidepanel/: App.tsx  index.css  index.html
apps/browser-extension/src/sidepanel/components/: ChatInput.tsx  ChatMessage.tsx  ChatView.tsx  SettingsPanel.tsx  SidebarHeader.tsx
apps/browser-extension/src/sidepanel/store/: chat.ts  connection.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  workspace.rs
apps/desktop/src/components/: CreateWorkspace.tsx  Header.tsx  Settings.tsx  StatusDot.tsx  WorkspaceDetail.tsx  WorkspaceList.tsx
apps/desktop/src/hooks/: useWorkspaces.ts
apps/obsidian-plugin/: PROGRESS.md  manifest.json  package.json  styles.css  tsconfig.json
apps/obsidian-plugin/dev/: harness.ts  index.html  mock-plugin.ts  obsidian-mock.ts  vite.config.ts
apps/obsidian-plugin/src/: main.ts  settings.ts  sidebar-view.ts  vault-context.ts
