[package]
name = "opencode-hub"
version = "0.1.0"
description = "OpenCode Hub — macOS menu bar app for managing OpenCode workspaces"
authors = []
edition = "2021"

[lib]
name = "opencode_hub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
tauri-plugin-dialog = "2.7.0"
